# medvision-ai

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
configs/: densenet_chexpert.yaml  efficientnet_isic.yaml
docs/: MODEL_CARD.md
src/: __init__.py
src/api/: main.py  schemas.py
src/data/: chexpert.py  isic.py  transforms.py
src/explainability/: gradcam.py  shap_explainer.py
src/models/: densenet.py  efficientnet.py  train.py
src/utils/: logger.py  metrics.py
tests/: test_metrics.py  test_models.py
